Cleaned up some code and removed warnings